# channeltest

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  cmake_installer_script.in
doc/: dox_setup.in
doc/html/: ChannelData_8h_source.html  DataValidator_8h_source.html  ProcessingSystem_8h_source.html  Utility_8h_source.html  annotated.html  annotated.js  classIneosTest_1_1ChannelData-members.html  classIneosTest_1_1ChannelData.html  classIneosTest_1_1ChannelData.js  classIneosTest_1_1DataValidator-members.html  classIneosTest_1_1DataValidator.html  classIneosTest_1_1DataValidator.js  classIneosTest_1_1ProcessingSystem-members.html  classIneosTest_1_1ProcessingSystem.html  classIneosTest_1_1ProcessingSystem.js  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_428b72cce4695761880add1d7e9d1370.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  index.html  navtree.js  navtreeindex0.js  pages.html  todo.html
doc/html/search/: all_63.js  all_70.js  classes_63.js  classes_64.js  classes_70.js  functions_63.js  functions_67.js  functions_69.js  functions_70.js  (+2 more)
doc/latex/: annotated.tex  classIneosTest_1_1ChannelData.tex  classIneosTest_1_1DataValidator.tex  classIneosTest_1_1ProcessingSystem.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_428b72cce4695761880add1d7e9d1370.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  refman.tex  todo.tex
src/: CMakeLists.txt  ChannelData.cpp  ChannelData.h  DataValidator.cpp  DataValidator.h  ProcessingSystem.cpp  ProcessingSystem.h  Utility.h
test/: CMakeLists.txt
test/TestProcessingSystem/: CMakeLists.txt  TestProcessingSystem.cpp
